tests/bad/match_not_enum.oc
/// fail: This type cannot be matched on

def main() {
    match 3.14159 {

    }
}